--- a/wp-content/wp-recall/add-on/user-info-tab/assets/style.css
+++ b/wp-content/wp-recall/add-on/user-info-tab/assets/style.css
@@ -102,8 +102,7 @@
 }
 .uit_social .uit_icon,
 .uit_country .uit_icon,
-.uit_last_page .uit_icon,
-.uit_all_custom_field .uit_icon {
+.uit_last_page .uit_icon {
     margin: 0 0 0 8px;
 }
 .uit_basic_info .uit_icon {
@@ -387,7 +386,7 @@
 .tc_uit_form {
     margin: 15px 0;
 }
-.tc_uit_form .uit_blk {
+.tc_uit_form .uit_blk .uit_balance {
     display: flex;
     margin: 3px 0 0 8px;
     padding: 0;
@@ -411,10 +410,10 @@
     align-items: center;
     display: flex;
 }
-.tc_uit_form .uit_balance {
+/*.tc_uit_form .uit_balance {
     float: none;
     margin: 3px 0 0 8px;
-}
+}*/
 
 /* Spoiler */
 .uit_spoiler_title {
